# BLR-Flow

./: .gitattributes  .gitignore  README.md  avoid.md  micro.md  rules.md
backend/: .dockerignore  API_DOCS.md  Dockerfile  check_overlap.py  data.csv  docs_plan.md  generate_unseen.py  main.py  process_data.py  pyproject.toml  render.yaml  requirements.txt  test_accuracy.py  test_og_model.py  traffic.db  tui_simulator.py
backend/models/: impact_scorer.pkl  le_junction.pkl  le_type.pkl  network_graph.json  violation_weights.json
backend/src/: config.py  endpoints.py  logger.py  main.py  scheduler.py  unseen_data.json
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: LiveDashboard.jsx
frontend/src/services/: api.js
