[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.137.1",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]
